# dotfiles

./: .chezmoi.toml.tmpl  .chezmoiroot  .env.example  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  LICENSE  README.md  bootstrap.sh  dot  hardlinks_config.conf  hardlinks_config_work.conf  install.sh  pyproject.toml  softlinks_config.conf  softlinks_config_mac.conf  softlinks_config_personal.conf  softlinks_config_work.conf  symlinks_config.conf  symlinks_config_work.conf  sync_config.conf  sync_config_work.conf
.claude/: settings.local.json
aerospace/: aerospace.toml  move-app-to-workspace.sh  move-apps-to-workspace.sh  move-slack-to-workspace.sh
arc/: StorableSidebar.json
claude/: ccstatusline_settings.json  settings.json
codex/: config.toml  hooks.json  notify.sh
docs/: arc-sidebar-history-exposure.md  install-rewrite-plan.md  private-secrets-submodule-plan.md  tests-in-ci-and-precommit-plan.md
home/: .chezmoiignore  dot_gitconfig.tmpl
home_chezmoi/: dot_gitconfig.tmpl
homebrew/: Brewfile  Brewfile.mac  Brewfile.mac_personal  Brewfile.mac_work  Brewfile.personal  Brewfile.terminal  Brewfile.work
idea/: .ideavimrc  .ideavimrc-wip-lazy  .ideavimrc_cursor_clean  .ideavimrc_lazyvim
install/: managed.toml
launchd/: com.mcrouch.ntfy-claude-code.plist
linux/: install.sh  install_debian.sh
mac_config/: osx-defaults.sh  play_pause_spotify.scpt
nvim/: README.md  lazy-lock.json  lazyvim.json
rovodev/: config.yml
scripts/: benchmark-zsh.sh  brew-install-custom.sh  hardlinks.sh  links.sh  non-homebrew-install.sh  osx-defaults.sh  (+4 more)
(+161 files in other folders)
