[project]
name = "dotfiles-cli"
version = "0.1.0"
description = "CLI for installing and syncing these dotfiles across machines"
requires-python = ">=3.11"
dependencies = [
    "dotbot>=1.20,<2",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["setup/dotfiles"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.pytest.ini_options]
testpaths = ["tests"]
